# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.sqlx/: query-123aa8ba2443118e8405110f24b23ba76f6e5460216e0c22baeb7f03e19cc04e.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
